--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,7 +2,7 @@
     margin:5px;
     padding:15px;
     border-radius:20px;
-    border-style:dotted;
+    border-style:groove;
     border-color:lightgray;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .item-buttom {
-    color:#BE1931;
+    color:#197cbe;
     background-color:white;
     border-style:none;
     padding:5px;
