--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -2,8 +2,8 @@
     margin:10px;
     padding:15px;
     border-radius:20px;
-    border-style:dotted;
-    border-color:#df5166;
+    border-style:groove;
+    border-color:#197cbe;
 }
 
 @media (max-width:480px) {
