--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,7 +6,7 @@
     margin:10px;
     padding:15px;
     border-radius:20px;
-    border-style: groove;
+    border-style: inset;
     border-color:#197cbe;
 }
 
@@ -23,7 +23,7 @@
     color:#197cbe;
     background-color:lightgray;
     border-radius:5px;
-    border-style:none;
+    border-style:inset;
     padding:10px;
 }
 
