--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -2,8 +2,8 @@
     margin:10px;
     padding:15px;
     border-radius:20px;
-    border-style:groove;
-    border-color:#197cbe;
+    border-style:inset;
+    border-color:rgb(36, 199, 77);
 }
 
 @media (max-width:480px) {
