--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,8 +6,7 @@
     margin:10px;
     padding:15px;
     border-radius:20px;
-    border-style: inset;
-    border-color:#197cbe;
+    border-color:#000;
 }
 
 .not-filled-cart {
@@ -18,24 +17,6 @@
     margin:10px;
     padding:15px;
 }
-
-.remove-cart, .go-to-home, .remove-item {
-    color:#197cbe;
-    background-color:lightgray;
-    border-radius:5px;
-    border-style:inset;
-    padding:10px;
-}
-
-.go-to-home {
-    text-decoration:none;
-}
-
-.go-to-home:hover {
-    text-decoration:none;
-    color:#197cbe;
-}
-
 
 @media (max-width:480px) {
     
@@ -102,32 +83,19 @@
 .item-added-price{
     font-size:20px;
     font-weight:bold;
-    color:darkgray;
+    color:#000;
 }
 
 .item-added-quantity{
     font-size:20px;
     font-weight:bold;
-    color:#197cbe;
+    color:#000;
 }
 
 .cart-total {
     font-size:22px;
     font-weight:bold;
     color:#197cbe;
-}
-
-.buy-buttom {
-    color:white;
-    background-color:#194dbe;
-    border-radius:5px;
-    border-style:none;
-    margin-top:10px;
-    padding:10px;
-}
-
-.form-label{
-    margin-right:5px;
 }
 
 .order-id {    
