--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,8 +2,7 @@
     margin:5px;
     padding:15px;
     border-radius:20px;
-    border-style:inset;
-    border-color:rgb(36, 199, 77);
+    border: 2px solid #000;
 }
 
 @media (max-width:480px) {
@@ -16,20 +15,16 @@
     width:200px;
 }
 
-.item-buttom {
-    color:#197cbe;
-    background-color:white;
-    border-style:none;
-    padding:5px;
-}
+
 
 .item-title{
-    font-size:22px;
+    font-size:20px;
     font-weight:bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 .item-price{
     font-size:20px;
     font-weight:bold;
-    color:darkgray;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
