--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -2,8 +2,7 @@
     margin:10px;
     padding:15px;
     border-radius:20px;
-    border-style:inset;
-    border-color:rgb(36, 199, 77);
+    border: 2px solid #000;
 }
 
 @media (max-width:480px) {
@@ -66,5 +65,4 @@
 .item-detail-price{
     font-size:20px;
     font-weight:bold;
-    color:darkgray;
 }
